# wafer3d

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.cursor/plans/: voxel-like_simulator_f9c69a8b.plan.md  voxel_reproduction_report_75c13db5.plan.md
configs/: default.yaml
docs/: reproduction-results.json  voxel-experiments-reproduction.md  voxel-reproduction-report.md  voxel-simulator.md
scripts/: run_reproduction.py  setup_backends.sh
scripts/patches/: ramulator2-drain.patch  scalesim-numpy-max.patch
tests/: __init__.py  test_api_graph.py  test_config.py  test_e2e.py  test_noc.py  test_ramulator_backend.py  test_scalesim_backend.py  test_topology_mapping.py  test_trace_coalesce.py
voxelsim/: __init__.py  cli.py
voxelsim/api/: __init__.py  collectives.py  ops.py  program.py
voxelsim/backends/: __init__.py  booksim_backend.py  dsent_backend.py  ramulator_backend.py  scalesim_backend.py
voxelsim/chip/: __init__.py  config.py  mapping.py  topology.py
voxelsim/explore/: __init__.py  pareto.py
voxelsim/graph/: __init__.py  builder.py  events.py
voxelsim/models/: __init__.py  llm.py  paradigms.py
voxelsim/sim/: __init__.py  core_sim.py  dram_sim.py  energy.py  engine.py  noc_sim.py  refresh.py  stats.py  thermal.py  trace_coalesce.py
