[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelsim"
version = "0.1.0"
description = "Compiler-aware end-to-end simulator for 3D-stacked AI chips (Voxel-like)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
voxelsim = "voxelsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxelsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
